public/css/pdf.css
html, body {
  color: black;
  font-weight: lighter;
  line-height: 1.4;
}

body {
  margin-left: 2cm;
  margin-right: 2cm;
}

h1, h2, h3, h4, h5, h6 {
  border-bottom: 0px;
  margin: 0;
  margin-bottom: 10px;
  padding: 0;
}

h1 {
  page-break-before: always;
}

h1:first-of-type {
  page-break-before: auto;
}

h2 {
  margin-top: 20px;
  margin-bottom: 8px;
}
h5 {
  font-size: 10px;
}
h6 {
  font-size: 10px;
}

h6[id^=tags] {
  display: none;
}

img {
  width: 100%;
}

code {
  background-color: #EAEAEA;
  color: black;
  font: 9px Consolas, "Liberation Mono", Menlo, "Courier New","Corpid", Courier, monospace;
  font-weight: lighter;
}

pre {
  page-break-inside: avoid;
  white-space: pre-wrap;
}

pre code {
  background-color: #EAEAEA;
  border-radius: 0;
  display: inherit;
  padding: 8px;
}

a, a:visited, a:active, a:hover, a[href]:after {
  border-bottom: 1.5px solid gray;
  color: inherit;
  text-decoration: none;
}

ul  {
  list-style-type: square;
  margin-top: 0px;
  padding-left: 15px;
}

table > thead > tr > th {
  background-color: #EAEAEA;
  border-bottom: 0px;
  text-align: left;
}

table > tbody > tr:nth-of-type(odd) {
  background-color: #FFF;
}

table.firstpage {
  border: 0px solid white;
  margin-left: 0;
  padding-left: 0;
}

table.firstpage > tbody > tr  > th,
table.firstpage > tbody > tr  > td {
  color: inherit;
  background-color: inherit;
  border: 0px solid white;
  font-weight: inherit;
  margin-left: 0;
  padding-left: 0;
}

.title {
  margin-top: 4cm;
}

.subtitle {
  font-weight: normal;
}

#pageHeader, #pageHeader-first {
  position: absolute;
  left: 9mm;
  height: 100%;
  width: 100%;
}

#pageContent {
  width: 100%;
}

#pageFooter {
  border: 0px;
}

